--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -3,18 +3,22 @@
     margin: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    max-width: 300px;
+    width: 300px;
+    height: 450px;
     background: rgb(0,0,0);
     background: linear-gradient(180deg, rgba(0,0,0,1) 50%, rgba(226,54,54,1) 100%);
+    display: flex;
+    flex-direction: column;
+    
 }
 
 h4, p{
-    font-family: "RobotoCondensed Bold", "Trebuchet MS", Helvetica, Arial, sans-serif;
     font-weight: bold;
     color: #fff;
 }
 
-img{
+.card > img{
     display: block;
-    max-width: 100%;
+    height: 300px;
+    object-fit: contain;
 }
