--- a/src/pages/Character/index.css
+++ b/src/pages/Character/index.css
@@ -12,17 +12,11 @@ img{
     max-width: 100%;
 }
 
-.character-info{
-    margin: 0 auto;
-    max-width: 960px;
-    color: #ffffff;
-}
 
-.character-bg{
-    background-color: black;
-}
-
-#series-title{
+section{
     margin: 0 auto;
+    padding: 30px 0px;
     max-width: 960px;
+    font-size: 30px;
+    border-bottom: 1px solid #e23636;
 }
