--- a/src/pages/Main/index.css
+++ b/src/pages/Main/index.css
@@ -1,13 +1,20 @@
 .characters-list{
     margin: 0 auto;
+    margin-top: 30px;
     max-width: 960px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start; 
 }
 
-img{
-    display: block;
-    max-width: 100%;
+.pagination-bar{
+    max-width: 960px;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
 }
