--- a/src/components/CharacterDetails/index.css
+++ b/src/components/CharacterDetails/index.css
@@ -19,6 +19,43 @@
 }
 
 .info{
+    margin-bottom: 10px;
     max-width: 640px;
     max-height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.info input, textarea{
+    display: inline-block;
+    width: 100%;
+    height: 30px;
+    background-color: #fff;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    font-size: 16px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: none;
+}
+
+.info textarea{
+    height: 125px;
+}
+
+.info button{
+    background-color: #f78f3f;
+    color: #fff;
+    border:none;
+    padding: 10px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.edit-form{
+    margin: 10px 5px;
 }
