--- a/src/pages/Main/index.css
+++ b/src/pages/Main/index.css
@@ -28,3 +28,12 @@
     align-items: center;
     margin: 0 auto;
 }
+
+.error-busca{
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+}
